// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sku-webpack-plugin > build > should create valid app 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,24 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>
       Webpack App
     </title>
     <meta
       name="viewport"
       content="width=device-width,initial-scale=1"
     >
     <script
       defer="defer"
       src="main.js"
     >
     </script>
     <link
       href="main.css"
       rel="stylesheet"
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html._1s9aigv11,html._1s9aigv11 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="_1s67bgr0 fts6pn10 fts6pn13">
+        <div class="cgvhbw0 _1s9aigv8s _1s9aigv7o _1s9aigvb0 _1s9aigv9w _1s9aigv5g _1s9aigv6c _1s9aigvic _1s9aigv4k _1s9aigv4d fts6pn10 fts6pn13 _1s9aigv34 _1s9aigv37">
+          <span class="cgvhbw0 _1s9aigv50 fts6pn0 fts6pn1 fts6pn1t fts6pna e739tz4">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;

exports[`sku-webpack-plugin > build > should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": .cgvhbw0 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
.cgvhbw1 {
  display: block;
}
.cgvhbw2 {
  line-height: 1;
}
.cgvhbw3 {
  list-style: none;
}
.cgvhbw4 {
  quotes: none;
}
.cgvhbw4:after,
.cgvhbw4:before {
  content: "";
}
.cgvhbw5 {
  border-collapse: collapse;
  border-spacing: 0;
}
.cgvhbw6 {
  -webkit-appearance: none;
  appearance: none;
}
.cgvhbw7 {
  background-color: transparent;
}
.cgvhbw8 {
  outline: var(--_1f8sjfx10) solid transparent;
  transition: outline-color 0.125s ease;
}
.cgvhbw8:focus-visible {
  outline-color: var(--_1f8sjfxm);
}
.cgvhbwa {
  color: inherit;
}
.cgvhbwb:disabled {
  opacity: 1;
}
.cgvhbwb::-ms-expand {
  display: none;
}
.cgvhbwd[type="number"] {
  -moz-appearance: textfield;
}
.cgvhbwd[type="number"]::-webkit-inner-spin-button,
.cgvhbwd[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
.cgvhbwd::-ms-clear {
  display: none;
}
.cgvhbwd::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
.cgvhbwg {
  color: inherit;
  text-decoration: none;
}
._1s9aigv0 {
  overflow: hidden;
}
._1s9aigv1 {
  overflow: scroll;
}
._1s9aigv2 {
  overflow: visible;
}
._1s9aigv3 {
  overflow: auto;
}
._1s9aigv4 {
  -webkit-user-select: none;
  user-select: none;
}
._1s9aigv5 {
  outline: none;
}
._1s9aigv6 {
  outline: var(--_1f8sjfx10) solid transparent;
  transition: outline-color 0.125s ease;
}
._1s9aigv6:focus-visible {
  outline-color: var(--_1f8sjfxm);
}
._1s9aigv7 {
  opacity: 0;
}
._1s9aigv8 {
  z-index: 0;
}
._1s9aigv9 {
  z-index: 1;
}
._1s9aigva {
  z-index: 2;
}
._1s9aigvb {
  z-index: 90;
}
._1s9aigvc {
  z-index: 100;
}
._1s9aigvd {
  z-index: 200;
}
._1s9aigve {
  z-index: 290;
}
._1s9aigvf {
  z-index: 300;
}
._1s9aigvg {
  z-index: 400;
}
._1s9aigvh {
  cursor: default;
}
._1s9aigvi {
  cursor: pointer;
}
._1s9aigvj {
  pointer-events: none;
}
._1s9aigvk {
  top: 0;
}
._1s9aigvl {
  bottom: 0;
}
._1s9aigvm {
  left: 0;
}
._1s9aigvn {
  right: 0;
}
._1s9aigvo {
  height: 100%;
}
._1s9aigvp {
  height: var(--_1f8sjfx9);
}
._1s9aigvq {
  width: 100%;
}
._1s9aigvr {
  width: var(--_1f8sjfx9);
}
._1s9aigvs {
  min-width: 0;
}
._1s9aigvt {
  max-width: var(--_1f8sjfx11);
}
._1s9aigvu {
  max-width: var(--_1f8sjfx12);
}
._1s9aigvv {
  max-width: var(--_1f8sjfx13);
}
._1s9aigvw {
  max-width: var(--_1f8sjfx14);
}
._1s9aigvx {
  max-width: -moz-fit-content;
  max-width: fit-content;
}
._1s9aigvy {
  transition: var(--_1f8sjfx5i);
}
._1s9aigvz {
  transition: var(--_1f8sjfx5j);
}
._1s9aigv10:active {
  transform: var(--_1f8sjfx5k);
}
html._1s9aigv11 ._1s9aigv13,
html:not(._1s9aigv11) ._1s9aigv12 {
  background: var(--_1f8sjfx1t);
}
html._1s9aigv11 ._1s9aigv15,
html:not(._1s9aigv11) ._1s9aigv14 {
  background: var(--_1f8sjfx1u);
}
html._1s9aigv11 ._1s9aigv17,
html:not(._1s9aigv11) ._1s9aigv16 {
  background: var(--_1f8sjfx1v);
}
html._1s9aigv11 ._1s9aigv19,
html:not(._1s9aigv11) ._1s9aigv18 {
  background: var(--_1f8sjfx1w);
}
html._1s9aigv11 ._1s9aigv1b,
html:not(._1s9aigv11) ._1s9aigv1a {
  background: var(--_1f8sjfx1x);
}
html._1s9aigv11 ._1s9aigv1d,
html:not(._1s9aigv11) ._1s9aigv1c {
  background: var(--_1f8sjfx1y);
}
html._1s9aigv11 ._1s9aigv1f,
html:not(._1s9aigv11) ._1s9aigv1e {
  background: var(--_1f8sjfx1z);
}
html._1s9aigv11 ._1s9aigv1h,
html:not(._1s9aigv11) ._1s9aigv1g {
  background: var(--_1f8sjfx20);
}
html._1s9aigv11 ._1s9aigv1j,
html:not(._1s9aigv11) ._1s9aigv1i {
  background: var(--_1f8sjfx21);
}
html._1s9aigv11 ._1s9aigv1l,
html:not(._1s9aigv11) ._1s9aigv1k {
  background: var(--_1f8sjfx22);
}
html._1s9aigv11 ._1s9aigv1n,
html:not(._1s9aigv11) ._1s9aigv1m {
  background: var(--_1f8sjfx23);
}
html._1s9aigv11 ._1s9aigv1p,
html:not(._1s9aigv11) ._1s9aigv1o {
  background: var(--_1f8sjfx24);
}
html._1s9aigv11 ._1s9aigv1r,
html:not(._1s9aigv11) ._1s9aigv1q {
  background: var(--_1f8sjfx25);
}
html._1s9aigv11 ._1s9aigv1t,
html:not(._1s9aigv11) ._1s9aigv1s {
  background: var(--_1f8sjfx26);
}
html._1s9aigv11 ._1s9aigv1v,
html:not(._1s9aigv11) ._1s9aigv1u {
  background: var(--_1f8sjfx27);
}
html._1s9aigv11 ._1s9aigv1x,
html:not(._1s9aigv11) ._1s9aigv1w {
  background: var(--_1f8sjfx28);
}
html._1s9aigv11 ._1s9aigv1z,
html:not(._1s9aigv11) ._1s9aigv1y {
  background: var(--_1f8sjfx29);
}
html._1s9aigv11 ._1s9aigv21,
html:not(._1s9aigv11) ._1s9aigv20 {
  background: var(--_1f8sjfx2a);
}
html._1s9aigv11 ._1s9aigv23,
html:not(._1s9aigv11) ._1s9aigv22 {
  background: var(--_1f8sjfx2b);
}
html._1s9aigv11 ._1s9aigv25,
html:not(._1s9aigv11) ._1s9aigv24 {
  background: var(--_1f8sjfx2c);
}
html._1s9aigv11 ._1s9aigv27,
html:not(._1s9aigv11) ._1s9aigv26 {
  background: var(--_1f8sjfx2d);
}
html._1s9aigv11 ._1s9aigv29,
html:not(._1s9aigv11) ._1s9aigv28 {
  background: var(--_1f8sjfx2e);
}
html._1s9aigv11 ._1s9aigv2b,
html:not(._1s9aigv11) ._1s9aigv2a {
  background: var(--_1f8sjfx2f);
}
html._1s9aigv11 ._1s9aigv2d,
html:not(._1s9aigv11) ._1s9aigv2c {
  background: var(--_1f8sjfx2g);
}
html._1s9aigv11 ._1s9aigv2f,
html:not(._1s9aigv11) ._1s9aigv2e {
  background: var(--_1f8sjfx2h);
}
html._1s9aigv11 ._1s9aigv2h,
html:not(._1s9aigv11) ._1s9aigv2g {
  background: var(--_1f8sjfx2i);
}
html._1s9aigv11 ._1s9aigv2j,
html:not(._1s9aigv11) ._1s9aigv2i {
  background: var(--_1f8sjfx2j);
}
html._1s9aigv11 ._1s9aigv2l,
html:not(._1s9aigv11) ._1s9aigv2k {
  background: var(--_1f8sjfx2k);
}
html._1s9aigv11 ._1s9aigv2n,
html:not(._1s9aigv11) ._1s9aigv2m {
  background: var(--_1f8sjfx2l);
}
html._1s9aigv11 ._1s9aigv2p,
html:not(._1s9aigv11) ._1s9aigv2o {
  background: var(--_1f8sjfx2m);
}
html._1s9aigv11 ._1s9aigv2r,
html:not(._1s9aigv11) ._1s9aigv2q {
  background: var(--_1f8sjfx2n);
}
html._1s9aigv11 ._1s9aigv2t,
html:not(._1s9aigv11) ._1s9aigv2s {
  background: var(--_1f8sjfx2o);
}
html._1s9aigv11 ._1s9aigv2v,
html:not(._1s9aigv11) ._1s9aigv2u {
  background: var(--_1f8sjfx2p);
}
html._1s9aigv11 ._1s9aigv2x,
html:not(._1s9aigv11) ._1s9aigv2w {
  background: var(--_1f8sjfx2q);
}
html._1s9aigv11 ._1s9aigv2z,
html:not(._1s9aigv11) ._1s9aigv2y {
  background: var(--_1f8sjfx2r);
}
html._1s9aigv11 ._1s9aigv31,
html:not(._1s9aigv11) ._1s9aigv30 {
  background: var(--_1f8sjfx2s);
}
html._1s9aigv11 ._1s9aigv33,
html:not(._1s9aigv11) ._1s9aigv32 {
  background: var(--_1f8sjfx2t);
}
html._1s9aigv11 ._1s9aigv35,
html:not(._1s9aigv11) ._1s9aigv34 {
  background: var(--_1f8sjfx2u);
}
html._1s9aigv11 ._1s9aigv37,
html:not(._1s9aigv11) ._1s9aigv36 {
  background: var(--_1f8sjfx2v);
}
html._1s9aigv11 ._1s9aigv39,
html:not(._1s9aigv11) ._1s9aigv38 {
  box-shadow: var(--_1f8sjfx5l);
}
html._1s9aigv11 ._1s9aigv3b,
html:not(._1s9aigv11) ._1s9aigv3a {
  box-shadow: var(--_1f8sjfx5m);
}
html._1s9aigv11 ._1s9aigv3d,
html:not(._1s9aigv11) ._1s9aigv3c {
  box-shadow: var(--_1f8sjfx5n);
}
html._1s9aigv11 ._1s9aigv3f,
html:not(._1s9aigv11) ._1s9aigv3e {
  box-shadow: inset 0 0 0 var(--_1f8sjfxy) var(--_1f8sjfxf);
}
html._1s9aigv11 ._1s9aigv3h,
html:not(._1s9aigv11) ._1s9aigv3g {
  box-shadow: inset 0 0 0 var(--_1f8sjfxy) var(--_1f8sjfxg);
}
html._1s9aigv11 ._1s9aigv3j,
html:not(._1s9aigv11) ._1s9aigv3i {
  box-shadow: inset 0 0 0 var(--_1f8sjfxz) var(--_1f8sjfxf);
}
html._1s9aigv11 ._1s9aigv3l,
html:not(._1s9aigv11) ._1s9aigv3k {
  box-shadow: inset 0 0 0 var(--_1f8sjfxz) var(--_1f8sjfxg);
}
html._1s9aigv11 ._1s9aigv3n,
html:not(._1s9aigv11) ._1s9aigv3m {
  box-shadow: inset 0 0 0 var(--_1f8sjfxy) var(--_1f8sjfxh);
}
html._1s9aigv11 ._1s9aigv3p,
html:not(._1s9aigv11) ._1s9aigv3o {
  box-shadow: inset 0 0 0 var(--_1f8sjfxy) var(--_1f8sjfxi);
}
html._1s9aigv11 ._1s9aigv3r,
html:not(._1s9aigv11) ._1s9aigv3q {
  box-shadow: inset 0 0 0 var(--_1f8sjfxy) var(--_1f8sjfxj);
}
html._1s9aigv11 ._1s9aigv3t,
html:not(._1s9aigv11) ._1s9aigv3s {
  box-shadow: inset 0 0 0 var(--_1f8sjfxz) var(--_1f8sjfxj);
}
html._1s9aigv11 ._1s9aigv3v,
html:not(._1s9aigv11) ._1s9aigv3u {
  box-shadow: inset 0 0 0 var(--_1f8sjfxy) var(--_1f8sjfxk);
}
html._1s9aigv11 ._1s9aigv3x,
html:not(._1s9aigv11) ._1s9aigv3w {
  box-shadow: inset 0 0 0 var(--_1f8sjfxz) var(--_1f8sjfxk);
}
html._1s9aigv11 ._1s9aigv3z,
html:not(._1s9aigv11) ._1s9aigv3y {
  box-shadow: inset 0 0 0 var(--_1f8sjfxy) var(--_1f8sjfxl);
}
html._1s9aigv11 ._1s9aigv41,
html:not(._1s9aigv11) ._1s9aigv40 {
  box-shadow: inset 0 0 0 var(--_1f8sjfxy) var(--_1f8sjfxn);
}
html._1s9aigv11 ._1s9aigv43,
html:not(._1s9aigv11) ._1s9aigv42 {
  box-shadow: inset 0 0 0 var(--_1f8sjfxz) var(--_1f8sjfxn);
}
html._1s9aigv11 ._1s9aigv45,
html:not(._1s9aigv11) ._1s9aigv44 {
  box-shadow: inset 0 0 0 var(--_1f8sjfxy) var(--_1f8sjfxo);
}
html._1s9aigv11 ._1s9aigv47,
html:not(._1s9aigv11) ._1s9aigv46 {
  box-shadow: inset 0 0 0 var(--_1f8sjfxz) var(--_1f8sjfxo);
}
html._1s9aigv11 ._1s9aigv49,
html:not(._1s9aigv11) ._1s9aigv48 {
  box-shadow: inset 0 0 0 var(--_1f8sjfxy) var(--_1f8sjfxp);
}
html._1s9aigv11 ._1s9aigv4b,
html:not(._1s9aigv11) ._1s9aigv4a {
  box-shadow: inset 0 0 0 var(--_1f8sjfxy) var(--_1f8sjfxq);
}
html._1s9aigv11 ._1s9aigv4d,
html:not(._1s9aigv11) ._1s9aigv4c {
  box-shadow: inset 0 0 0 var(--_1f8sjfxy) var(--_1f8sjfxr);
}
html._1s9aigv11 ._1s9aigv4f,
html:not(._1s9aigv11) ._1s9aigv4e {
  box-shadow: inset 0 0 0 var(--_1f8sjfxz) var(--_1f8sjfxr);
}
html._1s9aigv11 ._1s9aigv4h,
html:not(._1s9aigv11) ._1s9aigv4g {
  box-shadow: inset 0 0 0 var(--_1f8sjfxy) var(--_1f8sjfxs);
}
html._1s9aigv11 ._1s9aigv4j,
html:not(._1s9aigv11) ._1s9aigv4i {
  box-shadow: inset 0 0 0 var(--_1f8sjfxz) var(--_1f8sjfxs);
}
html._1s9aigv11 ._1s9aigv4l,
html:not(._1s9aigv11) ._1s9aigv4k {
  box-shadow: inset 0 0 0 var(--_1f8sjfxy) var(--_1f8sjfxt);
}
html._1s9aigv11 ._1s9aigv4n,
html:not(._1s9aigv11) ._1s9aigv4m {
  box-shadow: inset 0 0 0 var(--_1f8sjfxy) var(--_1f8sjfxu);
}
html._1s9aigv11 ._1s9aigv4p,
html:not(._1s9aigv11) ._1s9aigv4o {
  box-shadow: inset 0 0 0 var(--_1f8sjfxy) var(--_1f8sjfxv);
}
html._1s9aigv11 ._1s9aigv4r,
html:not(._1s9aigv11) ._1s9aigv4q {
  box-shadow: inset 0 0 0 var(--_1f8sjfxy) var(--_1f8sjfxw);
}
html._1s9aigv11 ._1s9aigv4t,
html:not(._1s9aigv11) ._1s9aigv4s {
  box-shadow: inset 0 0 0 var(--_1f8sjfxy) var(--_1f8sjfxx);
}
html._1s9aigv11 ._1s9aigv4v,
html:not(._1s9aigv11) ._1s9aigv4u {
  box-shadow: 0 0 0 var(--_1f8sjfx10) var(--_1f8sjfxm);
}
._1s9aigv4w {
  display: none;
}
._1s9aigv50 {
  display: block;
}
._1s9aigv54 {
  display: inline;
}
._1s9aigv58 {
  display: inline-block;
}
._1s9aigv5c {
  display: flex;
}
._1s9aigv5g {
  position: relative;
}
._1s9aigv5k {
  position: absolute;
}
._1s9aigv5o {
  position: fixed;
}
._1s9aigv5s {
  position: sticky;
}
._1s9aigv5w {
  border-radius: 0;
}
._1s9aigv60 {
  border-radius: 9999px;
}
._1s9aigv64 {
  border-radius: var(--_1f8sjfxb);
}
._1s9aigv68 {
  border-radius: var(--_1f8sjfxc);
}
._1s9aigv6c {
  border-radius: var(--_1f8sjfxd);
}
._1s9aigv6g {
  border-radius: var(--_1f8sjfxe);
}
._1s9aigv6k {
  gap: var(--_1f8sjfx0);
}
._1s9aigv6o {
  gap: var(--_1f8sjfx1);
}
._1s9aigv6s {
  gap: var(--_1f8sjfx2);
}
._1s9aigv6w {
  gap: var(--_1f8sjfx3);
}
._1s9aigv70 {
  gap: var(--_1f8sjfx4);
}
._1s9aigv74 {
  gap: var(--_1f8sjfx5);
}
._1s9aigv78 {
  gap: var(--_1f8sjfx6);
}
._1s9aigv7c {
  gap: var(--_1f8sjfx7);
}
._1s9aigv7g {
  gap: var(--_1f8sjfx8);
}
._1s9aigv7k {
  gap: 0;
}
._1s9aigv7o {
  padding-top: var(--_1f8sjfx0);
}
._1s9aigv7s {
  padding-top: var(--_1f8sjfx1);
}
._1s9aigv7w {
  padding-top: var(--_1f8sjfx2);
}
._1s9aigv80 {
  padding-top: var(--_1f8sjfx3);
}
._1s9aigv84 {
  padding-top: var(--_1f8sjfx4);
}
._1s9aigv88 {
  padding-top: var(--_1f8sjfx5);
}
._1s9aigv8c {
  padding-top: var(--_1f8sjfx6);
}
._1s9aigv8g {
  padding-top: var(--_1f8sjfx7);
}
._1s9aigv8k {
  padding-top: var(--_1f8sjfx8);
}
._1s9aigv8o {
  padding-top: 0;
}
._1s9aigv8s {
  padding-bottom: var(--_1f8sjfx0);
}
._1s9aigv8w {
  padding-bottom: var(--_1f8sjfx1);
}
._1s9aigv90 {
  padding-bottom: var(--_1f8sjfx2);
}
._1s9aigv94 {
  padding-bottom: var(--_1f8sjfx3);
}
._1s9aigv98 {
  padding-bottom: var(--_1f8sjfx4);
}
._1s9aigv9c {
  padding-bottom: var(--_1f8sjfx5);
}
._1s9aigv9g {
  padding-bottom: var(--_1f8sjfx6);
}
._1s9aigv9k {
  padding-bottom: var(--_1f8sjfx7);
}
._1s9aigv9o {
  padding-bottom: var(--_1f8sjfx8);
}
._1s9aigv9s {
  padding-bottom: 0;
}
._1s9aigv9w {
  padding-right: var(--_1f8sjfx0);
}
._1s9aigva0 {
  padding-right: var(--_1f8sjfx1);
}
._1s9aigva4 {
  padding-right: var(--_1f8sjfx2);
}
._1s9aigva8 {
  padding-right: var(--_1f8sjfx3);
}
._1s9aigvac {
  padding-right: var(--_1f8sjfx4);
}
._1s9aigvag {
  padding-right: var(--_1f8sjfx5);
}
._1s9aigvak {
  padding-right: var(--_1f8sjfx6);
}
._1s9aigvao {
  padding-right: var(--_1f8sjfx7);
}
._1s9aigvas {
  padding-right: var(--_1f8sjfx8);
}
._1s9aigvaw {
  padding-right: 0;
}
._1s9aigvb0 {
  padding-left: var(--_1f8sjfx0);
}
._1s9aigvb4 {
  padding-left: var(--_1f8sjfx1);
}
._1s9aigvb8 {
  padding-left: var(--_1f8sjfx2);
}
._1s9aigvbc {
  padding-left: var(--_1f8sjfx3);
}
._1s9aigvbg {
  padding-left: var(--_1f8sjfx4);
}
._1s9aigvbk {
  padding-left: var(--_1f8sjfx5);
}
._1s9aigvbo {
  padding-left: var(--_1f8sjfx6);
}
._1s9aigvbs {
  padding-left: var(--_1f8sjfx7);
}
._1s9aigvbw {
  padding-left: var(--_1f8sjfx8);
}
._1s9aigvc0 {
  padding-left: 0;
}
._1s9aigvc4 {
  margin-top: var(--_1f8sjfx0);
}
._1s9aigvc8 {
  margin-top: var(--_1f8sjfx1);
}
._1s9aigvcc {
  margin-top: var(--_1f8sjfx2);
}
._1s9aigvcg {
  margin-top: var(--_1f8sjfx3);
}
._1s9aigvck {
  margin-top: var(--_1f8sjfx4);
}
._1s9aigvco {
  margin-top: var(--_1f8sjfx5);
}
._1s9aigvcs {
  margin-top: var(--_1f8sjfx6);
}
._1s9aigvcw {
  margin-top: var(--_1f8sjfx7);
}
._1s9aigvd0 {
  margin-top: var(--_1f8sjfx8);
}
._1s9aigvd4 {
  margin-top: 0;
}
._1s9aigvd8 {
  margin-bottom: var(--_1f8sjfx0);
}
._1s9aigvdc {
  margin-bottom: var(--_1f8sjfx1);
}
._1s9aigvdg {
  margin-bottom: var(--_1f8sjfx2);
}
._1s9aigvdk {
  margin-bottom: var(--_1f8sjfx3);
}
._1s9aigvdo {
  margin-bottom: var(--_1f8sjfx4);
}
._1s9aigvds {
  margin-bottom: var(--_1f8sjfx5);
}
._1s9aigvdw {
  margin-bottom: var(--_1f8sjfx6);
}
._1s9aigve0 {
  margin-bottom: var(--_1f8sjfx7);
}
._1s9aigve4 {
  margin-bottom: var(--_1f8sjfx8);
}
._1s9aigve8 {
  margin-bottom: 0;
}
._1s9aigvec {
  margin-right: var(--_1f8sjfx0);
}
._1s9aigveg {
  margin-right: var(--_1f8sjfx1);
}
._1s9aigvek {
  margin-right: var(--_1f8sjfx2);
}
._1s9aigveo {
  margin-right: var(--_1f8sjfx3);
}
._1s9aigves {
  margin-right: var(--_1f8sjfx4);
}
._1s9aigvew {
  margin-right: var(--_1f8sjfx5);
}
._1s9aigvf0 {
  margin-right: var(--_1f8sjfx6);
}
._1s9aigvf4 {
  margin-right: var(--_1f8sjfx7);
}
._1s9aigvf8 {
  margin-right: var(--_1f8sjfx8);
}
._1s9aigvfc {
  margin-right: 0;
}
._1s9aigvfg {
  margin-left: var(--_1f8sjfx0);
}
._1s9aigvfk {
  margin-left: var(--_1f8sjfx1);
}
._1s9aigvfo {
  margin-left: var(--_1f8sjfx2);
}
._1s9aigvfs {
  margin-left: var(--_1f8sjfx3);
}
._1s9aigvfw {
  margin-left: var(--_1f8sjfx4);
}
._1s9aigvg0 {
  margin-left: var(--_1f8sjfx5);
}
._1s9aigvg4 {
  margin-left: var(--_1f8sjfx6);
}
._1s9aigvg8 {
  margin-left: var(--_1f8sjfx7);
}
._1s9aigvgc {
  margin-left: var(--_1f8sjfx8);
}
._1s9aigvgg {
  margin-left: 0;
}
._1s9aigvgk {
  align-items: flex-start;
}
._1s9aigvgo {
  align-items: center;
}
._1s9aigvgs {
  align-items: flex-end;
}
._1s9aigvgw {
  justify-content: flex-start;
}
._1s9aigvh0 {
  justify-content: center;
}
._1s9aigvh4 {
  justify-content: flex-end;
}
._1s9aigvh8 {
  justify-content: space-between;
}
._1s9aigvhc {
  flex-direction: row;
}
._1s9aigvhg {
  flex-direction: row-reverse;
}
._1s9aigvhk {
  flex-direction: column;
}
._1s9aigvho {
  flex-direction: column-reverse;
}
._1s9aigvhs {
  flex-wrap: wrap;
}
._1s9aigvhw {
  flex-wrap: nowrap;
}
._1s9aigvi0 {
  flex-shrink: 0;
}
._1s9aigvi4 {
  flex-grow: 0;
}
._1s9aigvi8 {
  flex-grow: 1;
}
._1s9aigvic {
  text-align: left;
}
._1s9aigvig {
  text-align: center;
}
._1s9aigvik {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._1s9aigv4x {
    display: none;
  }
  ._1s9aigv51 {
    display: block;
  }
  ._1s9aigv55 {
    display: inline;
  }
  ._1s9aigv59 {
    display: inline-block;
  }
  ._1s9aigv5d {
    display: flex;
  }
  ._1s9aigv5h {
    position: relative;
  }
  ._1s9aigv5l {
    position: absolute;
  }
  ._1s9aigv5p {
    position: fixed;
  }
  ._1s9aigv5t {
    position: sticky;
  }
  ._1s9aigv5x {
    border-radius: 0;
  }
  ._1s9aigv61 {
    border-radius: 9999px;
  }
  ._1s9aigv65 {
    border-radius: var(--_1f8sjfxb);
  }
  ._1s9aigv69 {
    border-radius: var(--_1f8sjfxc);
  }
  ._1s9aigv6d {
    border-radius: var(--_1f8sjfxd);
  }
  ._1s9aigv6h {
    border-radius: var(--_1f8sjfxe);
  }
  ._1s9aigv6l {
    gap: var(--_1f8sjfx0);
  }
  ._1s9aigv6p {
    gap: var(--_1f8sjfx1);
  }
  ._1s9aigv6t {
    gap: var(--_1f8sjfx2);
  }
  ._1s9aigv6x {
    gap: var(--_1f8sjfx3);
  }
  ._1s9aigv71 {
    gap: var(--_1f8sjfx4);
  }
  ._1s9aigv75 {
    gap: var(--_1f8sjfx5);
  }
  ._1s9aigv79 {
    gap: var(--_1f8sjfx6);
  }
  ._1s9aigv7d {
    gap: var(--_1f8sjfx7);
  }
  ._1s9aigv7h {
    gap: var(--_1f8sjfx8);
  }
  ._1s9aigv7l {
    gap: 0;
  }
  ._1s9aigv7p {
    padding-top: var(--_1f8sjfx0);
  }
  ._1s9aigv7t {
    padding-top: var(--_1f8sjfx1);
  }
  ._1s9aigv7x {
    padding-top: var(--_1f8sjfx2);
  }
  ._1s9aigv81 {
    padding-top: var(--_1f8sjfx3);
  }
  ._1s9aigv85 {
    padding-top: var(--_1f8sjfx4);
  }
  ._1s9aigv89 {
    padding-top: var(--_1f8sjfx5);
  }
  ._1s9aigv8d {
    padding-top: var(--_1f8sjfx6);
  }
  ._1s9aigv8h {
    padding-top: var(--_1f8sjfx7);
  }
  ._1s9aigv8l {
    padding-top: var(--_1f8sjfx8);
  }
  ._1s9aigv8p {
    padding-top: 0;
  }
  ._1s9aigv8t {
    padding-bottom: var(--_1f8sjfx0);
  }
  ._1s9aigv8x {
    padding-bottom: var(--_1f8sjfx1);
  }
  ._1s9aigv91 {
    padding-bottom: var(--_1f8sjfx2);
  }
  ._1s9aigv95 {
    padding-bottom: var(--_1f8sjfx3);
  }
  ._1s9aigv99 {
    padding-bottom: var(--_1f8sjfx4);
  }
  ._1s9aigv9d {
    padding-bottom: var(--_1f8sjfx5);
  }
  ._1s9aigv9h {
    padding-bottom: var(--_1f8sjfx6);
  }
  ._1s9aigv9l {
    padding-bottom: var(--_1f8sjfx7);
  }
  ._1s9aigv9p {
    padding-bottom: var(--_1f8sjfx8);
  }
  ._1s9aigv9t {
    padding-bottom: 0;
  }
  ._1s9aigv9x {
    padding-right: var(--_1f8sjfx0);
  }
  ._1s9aigva1 {
    padding-right: var(--_1f8sjfx1);
  }
  ._1s9aigva5 {
    padding-right: var(--_1f8sjfx2);
  }
  ._1s9aigva9 {
    padding-right: var(--_1f8sjfx3);
  }
  ._1s9aigvad {
    padding-right: var(--_1f8sjfx4);
  }
  ._1s9aigvah {
    padding-right: var(--_1f8sjfx5);
  }
  ._1s9aigval {
    padding-right: var(--_1f8sjfx6);
  }
  ._1s9aigvap {
    padding-right: var(--_1f8sjfx7);
  }
  ._1s9aigvat {
    padding-right: var(--_1f8sjfx8);
  }
  ._1s9aigvax {
    padding-right: 0;
  }
  ._1s9aigvb1 {
    padding-left: var(--_1f8sjfx0);
  }
  ._1s9aigvb5 {
    padding-left: var(--_1f8sjfx1);
  }
  ._1s9aigvb9 {
    padding-left: var(--_1f8sjfx2);
  }
  ._1s9aigvbd {
    padding-left: var(--_1f8sjfx3);
  }
  ._1s9aigvbh {
    padding-left: var(--_1f8sjfx4);
  }
  ._1s9aigvbl {
    padding-left: var(--_1f8sjfx5);
  }
  ._1s9aigvbp {
    padding-left: var(--_1f8sjfx6);
  }
  ._1s9aigvbt {
    padding-left: var(--_1f8sjfx7);
  }
  ._1s9aigvbx {
    padding-left: var(--_1f8sjfx8);
  }
  ._1s9aigvc1 {
    padding-left: 0;
  }
  ._1s9aigvc5 {
    margin-top: var(--_1f8sjfx0);
  }
  ._1s9aigvc9 {
    margin-top: var(--_1f8sjfx1);
  }
  ._1s9aigvcd {
    margin-top: var(--_1f8sjfx2);
  }
  ._1s9aigvch {
    margin-top: var(--_1f8sjfx3);
  }
  ._1s9aigvcl {
    margin-top: var(--_1f8sjfx4);
  }
  ._1s9aigvcp {
    margin-top: var(--_1f8sjfx5);
  }
  ._1s9aigvct {
    margin-top: var(--_1f8sjfx6);
  }
  ._1s9aigvcx {
    margin-top: var(--_1f8sjfx7);
  }
  ._1s9aigvd1 {
    margin-top: var(--_1f8sjfx8);
  }
  ._1s9aigvd5 {
    margin-top: 0;
  }
  ._1s9aigvd9 {
    margin-bottom: var(--_1f8sjfx0);
  }
  ._1s9aigvdd {
    margin-bottom: var(--_1f8sjfx1);
  }
  ._1s9aigvdh {
    margin-bottom: var(--_1f8sjfx2);
  }
  ._1s9aigvdl {
    margin-bottom: var(--_1f8sjfx3);
  }
  ._1s9aigvdp {
    margin-bottom: var(--_1f8sjfx4);
  }
  ._1s9aigvdt {
    margin-bottom: var(--_1f8sjfx5);
  }
  ._1s9aigvdx {
    margin-bottom: var(--_1f8sjfx6);
  }
  ._1s9aigve1 {
    margin-bottom: var(--_1f8sjfx7);
  }
  ._1s9aigve5 {
    margin-bottom: var(--_1f8sjfx8);
  }
  ._1s9aigve9 {
    margin-bottom: 0;
  }
  ._1s9aigved {
    margin-right: var(--_1f8sjfx0);
  }
  ._1s9aigveh {
    margin-right: var(--_1f8sjfx1);
  }
  ._1s9aigvel {
    margin-right: var(--_1f8sjfx2);
  }
  ._1s9aigvep {
    margin-right: var(--_1f8sjfx3);
  }
  ._1s9aigvet {
    margin-right: var(--_1f8sjfx4);
  }
  ._1s9aigvex {
    margin-right: var(--_1f8sjfx5);
  }
  ._1s9aigvf1 {
    margin-right: var(--_1f8sjfx6);
  }
  ._1s9aigvf5 {
    margin-right: var(--_1f8sjfx7);
  }
  ._1s9aigvf9 {
    margin-right: var(--_1f8sjfx8);
  }
  ._1s9aigvfd {
    margin-right: 0;
  }
  ._1s9aigvfh {
    margin-left: var(--_1f8sjfx0);
  }
  ._1s9aigvfl {
    margin-left: var(--_1f8sjfx1);
  }
  ._1s9aigvfp {
    margin-left: var(--_1f8sjfx2);
  }
  ._1s9aigvft {
    margin-left: var(--_1f8sjfx3);
  }
  ._1s9aigvfx {
    margin-left: var(--_1f8sjfx4);
  }
  ._1s9aigvg1 {
    margin-left: var(--_1f8sjfx5);
  }
  ._1s9aigvg5 {
    margin-left: var(--_1f8sjfx6);
  }
  ._1s9aigvg9 {
    margin-left: var(--_1f8sjfx7);
  }
  ._1s9aigvgd {
    margin-left: var(--_1f8sjfx8);
  }
  ._1s9aigvgh {
    margin-left: 0;
  }
  ._1s9aigvgl {
    align-items: flex-start;
  }
  ._1s9aigvgp {
    align-items: center;
  }
  ._1s9aigvgt {
    align-items: flex-end;
  }
  ._1s9aigvgx {
    justify-content: flex-start;
  }
  ._1s9aigvh1 {
    justify-content: center;
  }
  ._1s9aigvh5 {
    justify-content: flex-end;
  }
  ._1s9aigvh9 {
    justify-content: space-between;
  }
  ._1s9aigvhd {
    flex-direction: row;
  }
  ._1s9aigvhh {
    flex-direction: row-reverse;
  }
  ._1s9aigvhl {
    flex-direction: column;
  }
  ._1s9aigvhp {
    flex-direction: column-reverse;
  }
  ._1s9aigvht {
    flex-wrap: wrap;
  }
  ._1s9aigvhx {
    flex-wrap: nowrap;
  }
  ._1s9aigvi1 {
    flex-shrink: 0;
  }
  ._1s9aigvi5 {
    flex-grow: 0;
  }
  ._1s9aigvi9 {
    flex-grow: 1;
  }
  ._1s9aigvid {
    text-align: left;
  }
  ._1s9aigvih {
    text-align: center;
  }
  ._1s9aigvil {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._1s9aigv4y {
    display: none;
  }
  ._1s9aigv52 {
    display: block;
  }
  ._1s9aigv56 {
    display: inline;
  }
  ._1s9aigv5a {
    display: inline-block;
  }
  ._1s9aigv5e {
    display: flex;
  }
  ._1s9aigv5i {
    position: relative;
  }
  ._1s9aigv5m {
    position: absolute;
  }
  ._1s9aigv5q {
    position: fixed;
  }
  ._1s9aigv5u {
    position: sticky;
  }
  ._1s9aigv5y {
    border-radius: 0;
  }
  ._1s9aigv62 {
    border-radius: 9999px;
  }
  ._1s9aigv66 {
    border-radius: var(--_1f8sjfxb);
  }
  ._1s9aigv6a {
    border-radius: var(--_1f8sjfxc);
  }
  ._1s9aigv6e {
    border-radius: var(--_1f8sjfxd);
  }
  ._1s9aigv6i {
    border-radius: var(--_1f8sjfxe);
  }
  ._1s9aigv6m {
    gap: var(--_1f8sjfx0);
  }
  ._1s9aigv6q {
    gap: var(--_1f8sjfx1);
  }
  ._1s9aigv6u {
    gap: var(--_1f8sjfx2);
  }
  ._1s9aigv6y {
    gap: var(--_1f8sjfx3);
  }
  ._1s9aigv72 {
    gap: var(--_1f8sjfx4);
  }
  ._1s9aigv76 {
    gap: var(--_1f8sjfx5);
  }
  ._1s9aigv7a {
    gap: var(--_1f8sjfx6);
  }
  ._1s9aigv7e {
    gap: var(--_1f8sjfx7);
  }
  ._1s9aigv7i {
    gap: var(--_1f8sjfx8);
  }
  ._1s9aigv7m {
    gap: 0;
  }
  ._1s9aigv7q {
    padding-top: var(--_1f8sjfx0);
  }
  ._1s9aigv7u {
    padding-top: var(--_1f8sjfx1);
  }
  ._1s9aigv7y {
    padding-top: var(--_1f8sjfx2);
  }
  ._1s9aigv82 {
    padding-top: var(--_1f8sjfx3);
  }
  ._1s9aigv86 {
    padding-top: var(--_1f8sjfx4);
  }
  ._1s9aigv8a {
    padding-top: var(--_1f8sjfx5);
  }
  ._1s9aigv8e {
    padding-top: var(--_1f8sjfx6);
  }
  ._1s9aigv8i {
    padding-top: var(--_1f8sjfx7);
  }
  ._1s9aigv8m {
    padding-top: var(--_1f8sjfx8);
  }
  ._1s9aigv8q {
    padding-top: 0;
  }
  ._1s9aigv8u {
    padding-bottom: var(--_1f8sjfx0);
  }
  ._1s9aigv8y {
    padding-bottom: var(--_1f8sjfx1);
  }
  ._1s9aigv92 {
    padding-bottom: var(--_1f8sjfx2);
  }
  ._1s9aigv96 {
    padding-bottom: var(--_1f8sjfx3);
  }
  ._1s9aigv9a {
    padding-bottom: var(--_1f8sjfx4);
  }
  ._1s9aigv9e {
    padding-bottom: var(--_1f8sjfx5);
  }
  ._1s9aigv9i {
    padding-bottom: var(--_1f8sjfx6);
  }
  ._1s9aigv9m {
    padding-bottom: var(--_1f8sjfx7);
  }
  ._1s9aigv9q {
    padding-bottom: var(--_1f8sjfx8);
  }
  ._1s9aigv9u {
    padding-bottom: 0;
  }
  ._1s9aigv9y {
    padding-right: var(--_1f8sjfx0);
  }
  ._1s9aigva2 {
    padding-right: var(--_1f8sjfx1);
  }
  ._1s9aigva6 {
    padding-right: var(--_1f8sjfx2);
  }
  ._1s9aigvaa {
    padding-right: var(--_1f8sjfx3);
  }
  ._1s9aigvae {
    padding-right: var(--_1f8sjfx4);
  }
  ._1s9aigvai {
    padding-right: var(--_1f8sjfx5);
  }
  ._1s9aigvam {
    padding-right: var(--_1f8sjfx6);
  }
  ._1s9aigvaq {
    padding-right: var(--_1f8sjfx7);
  }
  ._1s9aigvau {
    padding-right: var(--_1f8sjfx8);
  }
  ._1s9aigvay {
    padding-right: 0;
  }
  ._1s9aigvb2 {
    padding-left: var(--_1f8sjfx0);
  }
  ._1s9aigvb6 {
    padding-left: var(--_1f8sjfx1);
  }
  ._1s9aigvba {
    padding-left: var(--_1f8sjfx2);
  }
  ._1s9aigvbe {
    padding-left: var(--_1f8sjfx3);
  }
  ._1s9aigvbi {
    padding-left: var(--_1f8sjfx4);
  }
  ._1s9aigvbm {
    padding-left: var(--_1f8sjfx5);
  }
  ._1s9aigvbq {
    padding-left: var(--_1f8sjfx6);
  }
  ._1s9aigvbu {
    padding-left: var(--_1f8sjfx7);
  }
  ._1s9aigvby {
    padding-left: var(--_1f8sjfx8);
  }
  ._1s9aigvc2 {
    padding-left: 0;
  }
  ._1s9aigvc6 {
    margin-top: var(--_1f8sjfx0);
  }
  ._1s9aigvca {
    margin-top: var(--_1f8sjfx1);
  }
  ._1s9aigvce {
    margin-top: var(--_1f8sjfx2);
  }
  ._1s9aigvci {
    margin-top: var(--_1f8sjfx3);
  }
  ._1s9aigvcm {
    margin-top: var(--_1f8sjfx4);
  }
  ._1s9aigvcq {
    margin-top: var(--_1f8sjfx5);
  }
  ._1s9aigvcu {
    margin-top: var(--_1f8sjfx6);
  }
  ._1s9aigvcy {
    margin-top: var(--_1f8sjfx7);
  }
  ._1s9aigvd2 {
    margin-top: var(--_1f8sjfx8);
  }
  ._1s9aigvd6 {
    margin-top: 0;
  }
  ._1s9aigvda {
    margin-bottom: var(--_1f8sjfx0);
  }
  ._1s9aigvde {
    margin-bottom: var(--_1f8sjfx1);
  }
  ._1s9aigvdi {
    margin-bottom: var(--_1f8sjfx2);
  }
  ._1s9aigvdm {
    margin-bottom: var(--_1f8sjfx3);
  }
  ._1s9aigvdq {
    margin-bottom: var(--_1f8sjfx4);
  }
  ._1s9aigvdu {
    margin-bottom: var(--_1f8sjfx5);
  }
  ._1s9aigvdy {
    margin-bottom: var(--_1f8sjfx6);
  }
  ._1s9aigve2 {
    margin-bottom: var(--_1f8sjfx7);
  }
  ._1s9aigve6 {
    margin-bottom: var(--_1f8sjfx8);
  }
  ._1s9aigvea {
    margin-bottom: 0;
  }
  ._1s9aigvee {
    margin-right: var(--_1f8sjfx0);
  }
  ._1s9aigvei {
    margin-right: var(--_1f8sjfx1);
  }
  ._1s9aigvem {
    margin-right: var(--_1f8sjfx2);
  }
  ._1s9aigveq {
    margin-right: var(--_1f8sjfx3);
  }
  ._1s9aigveu {
    margin-right: var(--_1f8sjfx4);
  }
  ._1s9aigvey {
    margin-right: var(--_1f8sjfx5);
  }
  ._1s9aigvf2 {
    margin-right: var(--_1f8sjfx6);
  }
  ._1s9aigvf6 {
    margin-right: var(--_1f8sjfx7);
  }
  ._1s9aigvfa {
    margin-right: var(--_1f8sjfx8);
  }
  ._1s9aigvfe {
    margin-right: 0;
  }
  ._1s9aigvfi {
    margin-left: var(--_1f8sjfx0);
  }
  ._1s9aigvfm {
    margin-left: var(--_1f8sjfx1);
  }
  ._1s9aigvfq {
    margin-left: var(--_1f8sjfx2);
  }
  ._1s9aigvfu {
    margin-left: var(--_1f8sjfx3);
  }
  ._1s9aigvfy {
    margin-left: var(--_1f8sjfx4);
  }
  ._1s9aigvg2 {
    margin-left: var(--_1f8sjfx5);
  }
  ._1s9aigvg6 {
    margin-left: var(--_1f8sjfx6);
  }
  ._1s9aigvga {
    margin-left: var(--_1f8sjfx7);
  }
  ._1s9aigvge {
    margin-left: var(--_1f8sjfx8);
  }
  ._1s9aigvgi {
    margin-left: 0;
  }
  ._1s9aigvgm {
    align-items: flex-start;
  }
  ._1s9aigvgq {
    align-items: center;
  }
  ._1s9aigvgu {
    align-items: flex-end;
  }
  ._1s9aigvgy {
    justify-content: flex-start;
  }
  ._1s9aigvh2 {
    justify-content: center;
  }
  ._1s9aigvh6 {
    justify-content: flex-end;
  }
  ._1s9aigvha {
    justify-content: space-between;
  }
  ._1s9aigvhe {
    flex-direction: row;
  }
  ._1s9aigvhi {
    flex-direction: row-reverse;
  }
  ._1s9aigvhm {
    flex-direction: column;
  }
  ._1s9aigvhq {
    flex-direction: column-reverse;
  }
  ._1s9aigvhu {
    flex-wrap: wrap;
  }
  ._1s9aigvhy {
    flex-wrap: nowrap;
  }
  ._1s9aigvi2 {
    flex-shrink: 0;
  }
  ._1s9aigvi6 {
    flex-grow: 0;
  }
  ._1s9aigvia {
    flex-grow: 1;
  }
  ._1s9aigvie {
    text-align: left;
  }
  ._1s9aigvii {
    text-align: center;
  }
  ._1s9aigvim {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._1s9aigv4z {
    display: none;
  }
  ._1s9aigv53 {
    display: block;
  }
  ._1s9aigv57 {
    display: inline;
  }
  ._1s9aigv5b {
    display: inline-block;
  }
  ._1s9aigv5f {
    display: flex;
  }
  ._1s9aigv5j {
    position: relative;
  }
  ._1s9aigv5n {
    position: absolute;
  }
  ._1s9aigv5r {
    position: fixed;
  }
  ._1s9aigv5v {
    position: sticky;
  }
  ._1s9aigv5z {
    border-radius: 0;
  }
  ._1s9aigv63 {
    border-radius: 9999px;
  }
  ._1s9aigv67 {
    border-radius: var(--_1f8sjfxb);
  }
  ._1s9aigv6b {
    border-radius: var(--_1f8sjfxc);
  }
  ._1s9aigv6f {
    border-radius: var(--_1f8sjfxd);
  }
  ._1s9aigv6j {
    border-radius: var(--_1f8sjfxe);
  }
  ._1s9aigv6n {
    gap: var(--_1f8sjfx0);
  }
  ._1s9aigv6r {
    gap: var(--_1f8sjfx1);
  }
  ._1s9aigv6v {
    gap: var(--_1f8sjfx2);
  }
  ._1s9aigv6z {
    gap: var(--_1f8sjfx3);
  }
  ._1s9aigv73 {
    gap: var(--_1f8sjfx4);
  }
  ._1s9aigv77 {
    gap: var(--_1f8sjfx5);
  }
  ._1s9aigv7b {
    gap: var(--_1f8sjfx6);
  }
  ._1s9aigv7f {
    gap: var(--_1f8sjfx7);
  }
  ._1s9aigv7j {
    gap: var(--_1f8sjfx8);
  }
  ._1s9aigv7n {
    gap: 0;
  }
  ._1s9aigv7r {
    padding-top: var(--_1f8sjfx0);
  }
  ._1s9aigv7v {
    padding-top: var(--_1f8sjfx1);
  }
  ._1s9aigv7z {
    padding-top: var(--_1f8sjfx2);
  }
  ._1s9aigv83 {
    padding-top: var(--_1f8sjfx3);
  }
  ._1s9aigv87 {
    padding-top: var(--_1f8sjfx4);
  }
  ._1s9aigv8b {
    padding-top: var(--_1f8sjfx5);
  }
  ._1s9aigv8f {
    padding-top: var(--_1f8sjfx6);
  }
  ._1s9aigv8j {
    padding-top: var(--_1f8sjfx7);
  }
  ._1s9aigv8n {
    padding-top: var(--_1f8sjfx8);
  }
  ._1s9aigv8r {
    padding-top: 0;
  }
  ._1s9aigv8v {
    padding-bottom: var(--_1f8sjfx0);
  }
  ._1s9aigv8z {
    padding-bottom: var(--_1f8sjfx1);
  }
  ._1s9aigv93 {
    padding-bottom: var(--_1f8sjfx2);
  }
  ._1s9aigv97 {
    padding-bottom: var(--_1f8sjfx3);
  }
  ._1s9aigv9b {
    padding-bottom: var(--_1f8sjfx4);
  }
  ._1s9aigv9f {
    padding-bottom: var(--_1f8sjfx5);
  }
  ._1s9aigv9j {
    padding-bottom: var(--_1f8sjfx6);
  }
  ._1s9aigv9n {
    padding-bottom: var(--_1f8sjfx7);
  }
  ._1s9aigv9r {
    padding-bottom: var(--_1f8sjfx8);
  }
  ._1s9aigv9v {
    padding-bottom: 0;
  }
  ._1s9aigv9z {
    padding-right: var(--_1f8sjfx0);
  }
  ._1s9aigva3 {
    padding-right: var(--_1f8sjfx1);
  }
  ._1s9aigva7 {
    padding-right: var(--_1f8sjfx2);
  }
  ._1s9aigvab {
    padding-right: var(--_1f8sjfx3);
  }
  ._1s9aigvaf {
    padding-right: var(--_1f8sjfx4);
  }
  ._1s9aigvaj {
    padding-right: var(--_1f8sjfx5);
  }
  ._1s9aigvan {
    padding-right: var(--_1f8sjfx6);
  }
  ._1s9aigvar {
    padding-right: var(--_1f8sjfx7);
  }
  ._1s9aigvav {
    padding-right: var(--_1f8sjfx8);
  }
  ._1s9aigvaz {
    padding-right: 0;
  }
  ._1s9aigvb3 {
    padding-left: var(--_1f8sjfx0);
  }
  ._1s9aigvb7 {
    padding-left: var(--_1f8sjfx1);
  }
  ._1s9aigvbb {
    padding-left: var(--_1f8sjfx2);
  }
  ._1s9aigvbf {
    padding-left: var(--_1f8sjfx3);
  }
  ._1s9aigvbj {
    padding-left: var(--_1f8sjfx4);
  }
  ._1s9aigvbn {
    padding-left: var(--_1f8sjfx5);
  }
  ._1s9aigvbr {
    padding-left: var(--_1f8sjfx6);
  }
  ._1s9aigvbv {
    padding-left: var(--_1f8sjfx7);
  }
  ._1s9aigvbz {
    padding-left: var(--_1f8sjfx8);
  }
  ._1s9aigvc3 {
    padding-left: 0;
  }
  ._1s9aigvc7 {
    margin-top: var(--_1f8sjfx0);
  }
  ._1s9aigvcb {
    margin-top: var(--_1f8sjfx1);
  }
  ._1s9aigvcf {
    margin-top: var(--_1f8sjfx2);
  }
  ._1s9aigvcj {
    margin-top: var(--_1f8sjfx3);
  }
  ._1s9aigvcn {
    margin-top: var(--_1f8sjfx4);
  }
  ._1s9aigvcr {
    margin-top: var(--_1f8sjfx5);
  }
  ._1s9aigvcv {
    margin-top: var(--_1f8sjfx6);
  }
  ._1s9aigvcz {
    margin-top: var(--_1f8sjfx7);
  }
  ._1s9aigvd3 {
    margin-top: var(--_1f8sjfx8);
  }
  ._1s9aigvd7 {
    margin-top: 0;
  }
  ._1s9aigvdb {
    margin-bottom: var(--_1f8sjfx0);
  }
  ._1s9aigvdf {
    margin-bottom: var(--_1f8sjfx1);
  }
  ._1s9aigvdj {
    margin-bottom: var(--_1f8sjfx2);
  }
  ._1s9aigvdn {
    margin-bottom: var(--_1f8sjfx3);
  }
  ._1s9aigvdr {
    margin-bottom: var(--_1f8sjfx4);
  }
  ._1s9aigvdv {
    margin-bottom: var(--_1f8sjfx5);
  }
  ._1s9aigvdz {
    margin-bottom: var(--_1f8sjfx6);
  }
  ._1s9aigve3 {
    margin-bottom: var(--_1f8sjfx7);
  }
  ._1s9aigve7 {
    margin-bottom: var(--_1f8sjfx8);
  }
  ._1s9aigveb {
    margin-bottom: 0;
  }
  ._1s9aigvef {
    margin-right: var(--_1f8sjfx0);
  }
  ._1s9aigvej {
    margin-right: var(--_1f8sjfx1);
  }
  ._1s9aigven {
    margin-right: var(--_1f8sjfx2);
  }
  ._1s9aigver {
    margin-right: var(--_1f8sjfx3);
  }
  ._1s9aigvev {
    margin-right: var(--_1f8sjfx4);
  }
  ._1s9aigvez {
    margin-right: var(--_1f8sjfx5);
  }
  ._1s9aigvf3 {
    margin-right: var(--_1f8sjfx6);
  }
  ._1s9aigvf7 {
    margin-right: var(--_1f8sjfx7);
  }
  ._1s9aigvfb {
    margin-right: var(--_1f8sjfx8);
  }
  ._1s9aigvff {
    margin-right: 0;
  }
  ._1s9aigvfj {
    margin-left: var(--_1f8sjfx0);
  }
  ._1s9aigvfn {
    margin-left: var(--_1f8sjfx1);
  }
  ._1s9aigvfr {
    margin-left: var(--_1f8sjfx2);
  }
  ._1s9aigvfv {
    margin-left: var(--_1f8sjfx3);
  }
  ._1s9aigvfz {
    margin-left: var(--_1f8sjfx4);
  }
  ._1s9aigvg3 {
    margin-left: var(--_1f8sjfx5);
  }
  ._1s9aigvg7 {
    margin-left: var(--_1f8sjfx6);
  }
  ._1s9aigvgb {
    margin-left: var(--_1f8sjfx7);
  }
  ._1s9aigvgf {
    margin-left: var(--_1f8sjfx8);
  }
  ._1s9aigvgj {
    margin-left: 0;
  }
  ._1s9aigvgn {
    align-items: flex-start;
  }
  ._1s9aigvgr {
    align-items: center;
  }
  ._1s9aigvgv {
    align-items: flex-end;
  }
  ._1s9aigvgz {
    justify-content: flex-start;
  }
  ._1s9aigvh3 {
    justify-content: center;
  }
  ._1s9aigvh7 {
    justify-content: flex-end;
  }
  ._1s9aigvhb {
    justify-content: space-between;
  }
  ._1s9aigvhf {
    flex-direction: row;
  }
  ._1s9aigvhj {
    flex-direction: row-reverse;
  }
  ._1s9aigvhn {
    flex-direction: column;
  }
  ._1s9aigvhr {
    flex-direction: column-reverse;
  }
  ._1s9aigvhv {
    flex-wrap: wrap;
  }
  ._1s9aigvhz {
    flex-wrap: nowrap;
  }
  ._1s9aigvi3 {
    flex-shrink: 0;
  }
  ._1s9aigvi7 {
    flex-grow: 0;
  }
  ._1s9aigvib {
    flex-grow: 1;
  }
  ._1s9aigvif {
    text-align: left;
  }
  ._1s9aigvij {
    text-align: center;
  }
  ._1s9aigvin {
    text-align: right;
  }
}
.e739tz4 {
  font-size: var(--e739tz0);
  line-height: var(--e739tz1);
}
.e739tz4:before {
  content: "";
  display: table;
  margin-bottom: var(--e739tz2);
}
.e739tz4:after {
  content: "";
  display: table;
  margin-top: var(--e739tz3);
}
.fts6pn0 {
  font-family: var(--_1f8sjfx2w);
}
.fts6pn1 {
  font-weight: var(--_1f8sjfx46);
}
.fts6pn2 {
  font-weight: var(--_1f8sjfx47);
}
.fts6pn3 {
  font-weight: var(--_1f8sjfx48);
}
.fts6pn4 {
  --e739tz0: var(--_1f8sjfx32);
  --e739tz1: var(--_1f8sjfx33);
  --e739tz2: var(--_1f8sjfx35);
  --e739tz3: var(--_1f8sjfx36);
}
.fts6pn6 {
  --e739tz0: var(--_1f8sjfx3c);
  --e739tz1: var(--_1f8sjfx3d);
  --e739tz2: var(--_1f8sjfx3f);
  --e739tz3: var(--_1f8sjfx3g);
}
.fts6pn8 {
  --e739tz0: var(--_1f8sjfx3m);
  --e739tz1: var(--_1f8sjfx3n);
  --e739tz2: var(--_1f8sjfx3p);
  --e739tz3: var(--_1f8sjfx3q);
}
.fts6pna {
  --e739tz0: var(--_1f8sjfx3w);
  --e739tz1: var(--_1f8sjfx3x);
  --e739tz2: var(--_1f8sjfx3z);
  --e739tz3: var(--_1f8sjfx40);
}
.fts6pnc {
  font-size: var(--_1f8sjfx32);
  line-height: var(--_1f8sjfx33);
}
.fts6pnd {
  font-size: var(--_1f8sjfx3c);
  line-height: var(--_1f8sjfx3d);
}
.fts6pne {
  font-size: var(--_1f8sjfx3m);
  line-height: var(--_1f8sjfx3n);
}
.fts6pnf {
  font-size: var(--_1f8sjfx3w);
  line-height: var(--_1f8sjfx3x);
}
.fts6png {
  font-weight: var(--_1f8sjfx5d);
}
.fts6pnh {
  font-weight: var(--_1f8sjfx5e);
}
.fts6pni {
  --e739tz0: var(--_1f8sjfx49);
  --e739tz1: var(--_1f8sjfx4a);
  --e739tz2: var(--_1f8sjfx4c);
  --e739tz3: var(--_1f8sjfx4d);
}
.fts6pnk {
  --e739tz0: var(--_1f8sjfx4j);
  --e739tz1: var(--_1f8sjfx4k);
  --e739tz2: var(--_1f8sjfx4m);
  --e739tz3: var(--_1f8sjfx4n);
}
.fts6pnm {
  --e739tz0: var(--_1f8sjfx4t);
  --e739tz1: var(--_1f8sjfx4u);
  --e739tz2: var(--_1f8sjfx4w);
  --e739tz3: var(--_1f8sjfx4x);
}
.fts6pno {
  --e739tz0: var(--_1f8sjfx53);
  --e739tz1: var(--_1f8sjfx54);
  --e739tz2: var(--_1f8sjfx56);
  --e739tz3: var(--_1f8sjfx57);
}
html:not(._1s9aigv11) .fts6pn10 {
  --fts6pnq: var(--_1f8sjfx19);
  --fts6pnr: var(--_1f8sjfx17);
  --fts6pns: var(--_1f8sjfx1d);
  --fts6pnt: var(--_1f8sjfx1o);
  --fts6pnu: var(--_1f8sjfx1m);
  --fts6pnv: var(--_1f8sjfx15);
  --fts6pnw: var(--_1f8sjfx1b);
  --fts6pnx: var(--_1f8sjfx1k);
  --fts6pny: var(--_1f8sjfx1r);
  --fts6pnz: var(--_1f8sjfx1f);
}
html:not(._1s9aigv11) .fts6pn11 {
  --fts6pnq: var(--_1f8sjfx1a);
  --fts6pnr: var(--_1f8sjfx18);
  --fts6pns: var(--_1f8sjfx1e);
  --fts6pnt: var(--_1f8sjfx1p);
  --fts6pnu: var(--_1f8sjfx1n);
  --fts6pnv: var(--_1f8sjfx16);
  --fts6pnw: var(--_1f8sjfx1c);
  --fts6pnx: var(--_1f8sjfx1l);
  --fts6pny: var(--_1f8sjfx1s);
  --fts6pnz: var(--_1f8sjfx1h);
}
html._1s9aigv11 .fts6pn12 {
  --fts6pnq: var(--_1f8sjfx19);
  --fts6pnr: var(--_1f8sjfx17);
  --fts6pns: var(--_1f8sjfx1d);
  --fts6pnt: var(--_1f8sjfx1o);
  --fts6pnu: var(--_1f8sjfx1m);
  --fts6pnv: var(--_1f8sjfx15);
  --fts6pnw: var(--_1f8sjfx1b);
  --fts6pnx: var(--_1f8sjfx1k);
  --fts6pny: var(--_1f8sjfx1r);
  --fts6pnz: var(--_1f8sjfx1f);
}
html._1s9aigv11 .fts6pn13 {
  --fts6pnq: var(--_1f8sjfx1a);
  --fts6pnr: var(--_1f8sjfx18);
  --fts6pns: var(--_1f8sjfx1e);
  --fts6pnt: var(--_1f8sjfx1p);
  --fts6pnu: var(--_1f8sjfx1n);
  --fts6pnv: var(--_1f8sjfx16);
  --fts6pnw: var(--_1f8sjfx1c);
  --fts6pnx: var(--_1f8sjfx1l);
  --fts6pny: var(--_1f8sjfx1s);
  --fts6pnz: var(--_1f8sjfx1h);
}
html:not(._1s9aigv11) .fts6pn14,
html:not(._1s9aigv11) .fts6pn15,
html:not(._1s9aigv11) .fts6pn16,
html:not(._1s9aigv11) .fts6pn17 {
  --fts6pnx: var(--fts6pnq);
}
html:not(._1s9aigv11) .fts6pn18,
html:not(._1s9aigv11) .fts6pn19 {
  --fts6pnx: var(--fts6pnr);
}
html:not(._1s9aigv11) .fts6pn1a {
  --fts6pnx: var(--fts6pnu);
}
html:not(._1s9aigv11) .fts6pn1b {
  --fts6pnx: var(--fts6pns);
}
html:not(._1s9aigv11) .fts6pn1c {
  --fts6pnx: var(--fts6pnt);
}
html._1s9aigv11 .fts6pn1d,
html._1s9aigv11 .fts6pn1e,
html._1s9aigv11 .fts6pn1f,
html._1s9aigv11 .fts6pn1g {
  --fts6pnx: var(--fts6pnq);
}
html._1s9aigv11 .fts6pn1h,
html._1s9aigv11 .fts6pn1i {
  --fts6pnx: var(--fts6pnr);
}
html._1s9aigv11 .fts6pn1j {
  --fts6pnx: var(--fts6pnu);
}
html._1s9aigv11 .fts6pn1k {
  --fts6pnx: var(--fts6pns);
}
html._1s9aigv11 .fts6pn1l {
  --fts6pnx: var(--fts6pnt);
}
.fts6pn1m {
  color: var(--fts6pnq);
}
.fts6pn1n {
  color: var(--fts6pnr);
}
.fts6pn1o {
  color: var(--fts6pns);
}
.fts6pn1p {
  color: var(--fts6pnt);
}
.fts6pn1q {
  color: var(--fts6pnu);
}
.fts6pn1r {
  color: var(--fts6pnv);
}
.fts6pn1s {
  color: var(--fts6pnw);
}
.fts6pn1t {
  color: var(--fts6pnx);
}
.fts6pn1u {
  color: var(--fts6pny);
}
.fts6pn1v {
  color: var(--fts6pnz);
}
.fts6pn1w {
  padding-bottom: calc((var(--_1f8sjfx9) - var(--_1f8sjfx33)) / 2);
  padding-top: calc((var(--_1f8sjfx9) - var(--_1f8sjfx33)) / 2);
}
.fts6pn1x {
  padding-bottom: calc((var(--_1f8sjfx9) - var(--_1f8sjfx3d)) / 2);
  padding-top: calc((var(--_1f8sjfx9) - var(--_1f8sjfx3d)) / 2);
}
.fts6pn1y {
  padding-bottom: calc((var(--_1f8sjfx9) - var(--_1f8sjfx3n)) / 2);
  padding-top: calc((var(--_1f8sjfx9) - var(--_1f8sjfx3n)) / 2);
}
.fts6pn1z {
  padding-bottom: calc((var(--_1f8sjfx9) - var(--_1f8sjfx3x)) / 2);
  padding-top: calc((var(--_1f8sjfx9) - var(--_1f8sjfx3x)) / 2);
}
@media screen and (min-width: 740px) {
  .fts6pn4 {
    --e739tz0: var(--_1f8sjfx37);
    --e739tz1: var(--_1f8sjfx38);
    --e739tz2: var(--_1f8sjfx3a);
    --e739tz3: var(--_1f8sjfx3b);
  }
  .fts6pn6 {
    --e739tz0: var(--_1f8sjfx3h);
    --e739tz1: var(--_1f8sjfx3i);
    --e739tz2: var(--_1f8sjfx3k);
    --e739tz3: var(--_1f8sjfx3l);
  }
  .fts6pn8 {
    --e739tz0: var(--_1f8sjfx3r);
    --e739tz1: var(--_1f8sjfx3s);
    --e739tz2: var(--_1f8sjfx3u);
    --e739tz3: var(--_1f8sjfx3v);
  }
  .fts6pna {
    --e739tz0: var(--_1f8sjfx41);
    --e739tz1: var(--_1f8sjfx42);
    --e739tz2: var(--_1f8sjfx44);
    --e739tz3: var(--_1f8sjfx45);
  }
  .fts6pnc {
    font-size: var(--_1f8sjfx37);
    line-height: var(--_1f8sjfx38);
  }
  .fts6pnd {
    font-size: var(--_1f8sjfx3h);
    line-height: var(--_1f8sjfx3i);
  }
  .fts6pne {
    font-size: var(--_1f8sjfx3r);
    line-height: var(--_1f8sjfx3s);
  }
  .fts6pnf {
    font-size: var(--_1f8sjfx41);
    line-height: var(--_1f8sjfx42);
  }
  .fts6pni {
    --e739tz0: var(--_1f8sjfx4e);
    --e739tz1: var(--_1f8sjfx4f);
    --e739tz2: var(--_1f8sjfx4h);
    --e739tz3: var(--_1f8sjfx4i);
  }
  .fts6pnk {
    --e739tz0: var(--_1f8sjfx4o);
    --e739tz1: var(--_1f8sjfx4p);
    --e739tz2: var(--_1f8sjfx4r);
    --e739tz3: var(--_1f8sjfx4s);
  }
  .fts6pnm {
    --e739tz0: var(--_1f8sjfx4y);
    --e739tz1: var(--_1f8sjfx4z);
    --e739tz2: var(--_1f8sjfx51);
    --e739tz3: var(--_1f8sjfx52);
  }
  .fts6pno {
    --e739tz0: var(--_1f8sjfx58);
    --e739tz1: var(--_1f8sjfx59);
    --e739tz2: var(--_1f8sjfx5b);
    --e739tz3: var(--_1f8sjfx5c);
  }
  .fts6pn1w {
    padding-bottom: calc((var(--_1f8sjfx9) - var(--_1f8sjfx38)) / 2);
    padding-top: calc((var(--_1f8sjfx9) - var(--_1f8sjfx38)) / 2);
  }
  .fts6pn1x {
    padding-bottom: calc((var(--_1f8sjfx9) - var(--_1f8sjfx3i)) / 2);
    padding-top: calc((var(--_1f8sjfx9) - var(--_1f8sjfx3i)) / 2);
  }
  .fts6pn1y {
    padding-bottom: calc((var(--_1f8sjfx9) - var(--_1f8sjfx3s)) / 2);
    padding-top: calc((var(--_1f8sjfx9) - var(--_1f8sjfx3s)) / 2);
  }
  .fts6pn1z {
    padding-bottom: calc((var(--_1f8sjfx9) - var(--_1f8sjfx42)) / 2);
    padding-top: calc((var(--_1f8sjfx9) - var(--_1f8sjfx42)) / 2);
  }
}
._1s67bgr0 {
  --_1f8sjfx0: 24px;
  --_1f8sjfx1: 8px;
  --_1f8sjfx2: 12px;
  --_1f8sjfx3: 16px;
  --_1f8sjfx4: 24px;
  --_1f8sjfx5: 32px;
  --_1f8sjfx6: 48px;
  --_1f8sjfx7: 64px;
  --_1f8sjfx8: 96px;
  --_1f8sjfx9: 48px;
  --_1f8sjfxa: 4px;
  --_1f8sjfxb: 4px;
  --_1f8sjfxc: 8px;
  --_1f8sjfxd: 16px;
  --_1f8sjfxe: 24px;
  --_1f8sjfxf: #e60278;
  --_1f8sjfxg: #f8b1dc;
  --_1f8sjfxh: #fdc221;
  --_1f8sjfxi: #fee384;
  --_1f8sjfxj: #b91e1e;
  --_1f8sjfxk: #fb999a;
  --_1f8sjfxl: #838fa5;
  --_1f8sjfxm: rgba(153, 191, 247, 0.7);
  --_1f8sjfxn: #1e47a9;
  --_1f8sjfxo: #99bff7;
  --_1f8sjfxp: #1d559d;
  --_1f8sjfxq: #98c9f1;
  --_1f8sjfxr: #2e3849;
  --_1f8sjfxt: #eaecf1;
  --_1f8sjfxs: #fff;
  --_1f8sjfxu: #12784f;
  --_1f8sjfxv: #8bdec5;
  --_1f8sjfxw: #7f35a9;
  --_1f8sjfxx: #e1b2f5;
  --_1f8sjfxy: 2px;
  --_1f8sjfxz: 4px;
  --_1f8sjfx10: 6px;
  --_1f8sjfx11: 400px;
  --_1f8sjfx12: 660px;
  --_1f8sjfx13: 940px;
  --_1f8sjfx14: 1280px;
  --_1f8sjfx15: #e60278;
  --_1f8sjfx16: #f8b1dc;
  --_1f8sjfx17: #723d02;
  --_1f8sjfx18: #fee384;
  --_1f8sjfx19: #b91e1e;
  --_1f8sjfx1a: #fb999a;
  --_1f8sjfx1b: #1e47a9;
  --_1f8sjfx1c: #99bff7;
  --_1f8sjfx1d: #1d559d;
  --_1f8sjfx1e: #98c9f1;
  --_1f8sjfx1f: #2e3849;
  --_1f8sjfx1h: #fff;
  --_1f8sjfx1g: #2e3849;
  --_1f8sjfx1i: #5b2084;
  --_1f8sjfx1j: #f0d6fa;
  --_1f8sjfx1k: #2e3849;
  --_1f8sjfx1l: #fff;
  --_1f8sjfx1m: #12784f;
  --_1f8sjfx1n: #8bdec5;
  --_1f8sjfx1o: #7f35a9;
  --_1f8sjfx1p: #e1b2f5;
  --_1f8sjfx1q: #e60278;
  --_1f8sjfx1r: #5a6881;
  --_1f8sjfx1s: hsla(0, 0%, 100%, 0.65);
  --_1f8sjfx1t: #fff;
  --_1f8sjfx1u: #1c2330;
  --_1f8sjfx1v: #051a49;
  --_1f8sjfx1w: #e60278;
  --_1f8sjfx1x: #cd026b;
  --_1f8sjfx1y: #fd0585;
  --_1f8sjfx1z: #feeffa;
  --_1f8sjfx20: #fdd7f3;
  --_1f8sjfx21: #fde3f6;
  --_1f8sjfx22: #fdc221;
  --_1f8sjfx23: #fef8de;
  --_1f8sjfx24: #b91e1e;
  --_1f8sjfx25: #a31a1a;
  --_1f8sjfx26: #db1616;
  --_1f8sjfx27: #ffe3e2;
  --_1f8sjfx28: #fef3f3;
  --_1f8sjfx29: #fcdbdb;
  --_1f8sjfx2a: #fde7e7;
  --_1f8sjfx2b: #1e47a9;
  --_1f8sjfx2c: #1a3e93;
  --_1f8sjfx2d: #2455c9;
  --_1f8sjfx2e: #f0f7fe;
  --_1f8sjfx2f: #d8eafc;
  --_1f8sjfx2g: #e4f1fd;
  --_1f8sjfx2h: #1d559d;
  --_1f8sjfx2i: #e3f2fb;
  --_1f8sjfx2j: #2e3849;
  --_1f8sjfx2k: #242c39;
  --_1f8sjfx2l: #384459;
  --_1f8sjfx2m: #f3f5f7;
  --_1f8sjfx2n: #f3f5f7;
  --_1f8sjfx2o: #e4e8ed;
  --_1f8sjfx2p: #ebeff2;
  --_1f8sjfx2q: #12784f;
  --_1f8sjfx2r: #e2f7f1;
  --_1f8sjfx2s: #7f35a9;
  --_1f8sjfx2t: #f9ebfd;
  --_1f8sjfx2u: #fff;
  --_1f8sjfx2v: #1c2330;
  --_1f8sjfx2w: SeekSans, "SeekSans Fallback", Arial, Tahoma, sans-serif;
  --_1f8sjfx2x: 783;
  --_1f8sjfx2y: 1057;
  --_1f8sjfx2z: -274;
  --_1f8sjfx30: 0;
  --_1f8sjfx31: 1000;
  --_1f8sjfx3w: 18px;
  --_1f8sjfx3x: 27.094px;
  --_1f8sjfx3y: 14.094px;
  --_1f8sjfx3z: -0.3611em;
  --_1f8sjfx40: -0.3611em;
  --_1f8sjfx41: 18px;
  --_1f8sjfx42: 27.094px;
  --_1f8sjfx43: 14.094px;
  --_1f8sjfx44: -0.3611em;
  --_1f8sjfx45: -0.3611em;
  --_1f8sjfx3m: 16px;
  --_1f8sjfx3n: 24.528px;
  --_1f8sjfx3o: 12.528px;
  --_1f8sjfx3p: -0.375em;
  --_1f8sjfx3q: -0.375em;
  --_1f8sjfx3r: 16px;
  --_1f8sjfx3s: 24.528px;
  --_1f8sjfx3t: 12.528px;
  --_1f8sjfx3u: -0.375em;
  --_1f8sjfx3v: -0.375em;
  --_1f8sjfx3c: 14px;
  --_1f8sjfx3d: 20.962px;
  --_1f8sjfx3e: 10.962px;
  --_1f8sjfx3f: -0.3571em;
  --_1f8sjfx3g: -0.3571em;
  --_1f8sjfx3h: 14px;
  --_1f8sjfx3i: 20.962px;
  --_1f8sjfx3j: 10.962px;
  --_1f8sjfx3k: -0.3571em;
  --_1f8sjfx3l: -0.3571em;
  --_1f8sjfx32: 12px;
  --_1f8sjfx33: 18.396px;
  --_1f8sjfx34: 9.396px;
  --_1f8sjfx35: -0.375em;
  --_1f8sjfx36: -0.375em;
  --_1f8sjfx37: 12px;
  --_1f8sjfx38: 18.396px;
  --_1f8sjfx39: 9.396px;
  --_1f8sjfx3a: -0.375em;
  --_1f8sjfx3b: -0.375em;
  --_1f8sjfx46: 400;
  --_1f8sjfx47: 600;
  --_1f8sjfx48: 700;
  --_1f8sjfx49: 28px;
  --_1f8sjfx4a: 32.924px;
  --_1f8sjfx4b: 21.924px;
  --_1f8sjfx4c: -0.1964em;
  --_1f8sjfx4d: -0.1964em;
  --_1f8sjfx4e: 36px;
  --_1f8sjfx4f: 42.188px;
  --_1f8sjfx4g: 28.188px;
  --_1f8sjfx4h: -0.1944em;
  --_1f8sjfx4i: -0.1944em;
  --_1f8sjfx4j: 24px;
  --_1f8sjfx4k: 29.792px;
  --_1f8sjfx4l: 18.792px;
  --_1f8sjfx4m: -0.2292em;
  --_1f8sjfx4n: -0.2292em;
  --_1f8sjfx4o: 30px;
  --_1f8sjfx4p: 36.49px;
  --_1f8sjfx4q: 23.49px;
  --_1f8sjfx4r: -0.2167em;
  --_1f8sjfx4s: -0.2167em;
  --_1f8sjfx4t: 22px;
  --_1f8sjfx4u: 27.226px;
  --_1f8sjfx4v: 17.226px;
  --_1f8sjfx4w: -0.2273em;
  --_1f8sjfx4x: -0.2273em;
  --_1f8sjfx4y: 24px;
  --_1f8sjfx4z: 29.792px;
  --_1f8sjfx50: 18.792px;
  --_1f8sjfx51: -0.2292em;
  --_1f8sjfx52: -0.2292em;
  --_1f8sjfx53: 20px;
  --_1f8sjfx54: 24.66px;
  --_1f8sjfx55: 15.66px;
  --_1f8sjfx56: -0.225em;
  --_1f8sjfx57: -0.225em;
  --_1f8sjfx58: 20px;
  --_1f8sjfx59: 24.66px;
  --_1f8sjfx5a: 15.66px;
  --_1f8sjfx5b: -0.225em;
  --_1f8sjfx5c: -0.225em;
  --_1f8sjfx5d: 400;
  --_1f8sjfx5e: 600;
  --_1f8sjfx5f: underline;
  --_1f8sjfx5g: 24px;
  --_1f8sjfx5h: 20px;
  --_1f8sjfx5i: transform 0.125s ease, opacity 0.125s ease;
  --_1f8sjfx5j: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --_1f8sjfx5k: scale(0.95);
  --_1f8sjfx5l:
    0 0 4px 0 rgba(28, 35, 48, 0.08), 0 4px 8px -2px rgba(28, 35, 48, 0.08);
  --_1f8sjfx5m:
    0 0 8px 0 rgba(28, 35, 48, 0.08), 0 8px 16px -4px rgba(28, 35, 48, 0.08);
  --_1f8sjfx5n:
    0 0 12px 0 rgba(28, 35, 48, 0.08), 0 12px 24px -6px rgba(28, 35, 48, 0.08);
}
._1mkrbki6 {
  background: var(--_1mkrbki0);
}
._1mkrbki7 {
  background: var(--_1mkrbki1);
}
._1mkrbki8 {
  background: var(--_1mkrbki2);
}
._1mkrbki9 {
  background: var(--_1mkrbki3);
}
._1mkrbkia {
  background: var(--_1mkrbki4);
}
._1mkrbkib {
  background: var(--_1mkrbki5);
}
html:not(._1s9aigv11) ._1mkrbkic {
  --_1mkrbki0: var(--_1f8sjfxw);
  --_1mkrbki1: var(--_1f8sjfxp);
  --_1mkrbki2: var(--_1f8sjfxu);
  --_1mkrbki3: var(--_1f8sjfxh);
  --_1mkrbki4: var(--_1f8sjfxj);
  --_1mkrbki5: var(--_1f8sjfxn);
}
html:not(._1s9aigv11) ._1mkrbkid {
  --_1mkrbki0: var(--_1f8sjfxx);
  --_1mkrbki1: var(--_1f8sjfxq);
  --_1mkrbki2: var(--_1f8sjfxv);
  --_1mkrbki3: var(--_1f8sjfxi);
  --_1mkrbki4: var(--_1f8sjfxk);
  --_1mkrbki5: var(--_1f8sjfxo);
}
html._1s9aigv11 ._1mkrbkie {
  --_1mkrbki0: var(--_1f8sjfxw);
  --_1mkrbki1: var(--_1f8sjfxp);
  --_1mkrbki2: var(--_1f8sjfxu);
  --_1mkrbki3: var(--_1f8sjfxh);
  --_1mkrbki4: var(--_1f8sjfxj);
  --_1mkrbki5: var(--_1f8sjfxn);
}
html._1s9aigv11 ._1mkrbkif {
  --_1mkrbki0: var(--_1f8sjfxx);
  --_1mkrbki1: var(--_1f8sjfxq);
  --_1mkrbki2: var(--_1f8sjfxv);
  --_1mkrbki3: var(--_1f8sjfxi);
  --_1mkrbki4: var(--_1f8sjfxk);
  --_1mkrbki5: var(--_1f8sjfxo);
}
._1mkrbkig {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
._1mkrbkih {
  width: var(--_1f8sjfxe);
}
._1mkrbkii {
  width: var(--_1f8sjfxa);
}
.tibuzd0 {
  margin-bottom: -0.1em;
}
.tibuzd2 {
  overflow-wrap: break-word;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.tibuzd0 .tibuzd2 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  .tibuzd4 {
    display: -webkit-box;
    white-space: normal;
    -webkit-line-clamp: var(--tibuzd3);
    -webkit-box-orient: vertical;
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom-client.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-dom.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin > start > should start a development server 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>
       Webpack App
     </title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
     >
     <script
       defer
       src="main.js"
     >
     </script>
     <link
       href="main.css"
       rel="stylesheet"
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html.sprinkles_darkMode__1s9aigv11,html.sprinkles_darkMode__1s9aigv11 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="seekJobs_seekJobs__1s67bgr0 typography_lightModeTone_light__fts6pn10 typography_darkModeTone_dark__fts6pn13">
+        <div class="reset_base__cgvhbw0 sprinkles_paddingBottom_gutter_mobile__1s9aigv8s sprinkles_paddingTop_gutter_mobile__1s9aigv7o sprinkles_paddingLeft_gutter_mobile__1s9aigvb0 sprinkles_paddingRight_gutter_mobile__1s9aigv9w sprinkles_position_relative_mobile__1s9aigv5g sprinkles_borderRadius_large_mobile__1s9aigv6c sprinkles_textAlign_left_mobile__1s9aigvic sprinkles_boxShadow_borderNeutralLight_lightMode__1s9aigv4k sprinkles_boxShadow_borderNeutral_darkMode__1s9aigv4d typography_lightModeTone_light__fts6pn10 typography_darkModeTone_dark__fts6pn13 sprinkles_background_surface_lightMode__1s9aigv34 sprinkles_background_surfaceDark_darkMode__1s9aigv37">
+          <span class="reset_base__cgvhbw0 sprinkles_display_block_mobile__1s9aigv50 typography_fontFamily__fts6pn0 typography_fontWeight_regular__fts6pn1 typography_tone_neutral__fts6pn1t typography_textSize_large__fts6pna capsize_capsizeStyle__e739tz4">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;
